Added find by last updated methods